--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
                         <a href="#" class="logo_main">
                             <img src="assets/images/logo.png" alt=""> 
                         </a>
-                        <a class="btn_1" href="#">Audit</a>
-                    </div>
-                    <div class="download">
-                        <a href="#" class="btn_2">Download Now <img src="assets/images/header/download.png" alt=""></a>
-                    </div>
+                        <div class="logo_btn">
+                            <a class="btn_1" href="#">Audit</a>
+                            <a href="#" class="btn_2">Whitepaper</a>
+                        </div> 
+                    </div> 
                     <div class="header_social">
                         <ul>
                             <li><a href="#" class="btn_1">Join US <img src="assets/images/header/location.png" alt=""></a></li>
@@ -61,8 +61,8 @@
                         <div class="col-md-6">
                             <div class="banner_left">
                                 <h2>Earn money while experiencing the world of Unicorn Tap!</h2>
-                                <p>Why waste your time playing traditional games when you can earn money passively on the side. Download the free game and start your journey now to become one of Pakolt's biggest miners. By tapping you earn free Unicoins, which you can exchange for real cryptocurrencies! Learn more about Unicorn Tap below or inside the Whitepaper!</p>
-                                <a href="#" class="btn_1">Whitepaper <i class="fa-solid fa-arrow-right"></i></a>
+                                <p>Why waste your time playing traditional games when you can earn money passively on the side. Download the free game and start your journey now to become one of Pakolt's biggest miners. By tapping you earn free Unicoins, which you can exchange for real cryptocurrencies! Learn more about Unicorn Tap below or inside the Whitepaper!</p> 
+                                <a href="#" class="btn_2">Download Now <img src="assets/images/header/download.png" alt=""></a>
                             </div>
                         </div>
                         <div class="col-md-6">
@@ -79,19 +79,25 @@
             <section class="season_area section_padding">
                 <div class="container">
                     <div class="season">
-                        <div class="row">
-                            <div class="col-md-7">
-                                <div class="season_left">
-                                    <h1>Season 0</h1>
-                                    <h2>Beta version</h2>
+                        <div class="season_contentt"> 
+                            <div class="row">
+                                <div class="col-md-4">
+                                    <div class="season_img">
+                                        <img src="assets/images/season/1.png" alt="">
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="col-md-5">
-                                <div class="season_right">
-                                    <p>
-                                        The unicorn Jokoje has an important message for all crypto investors on earth. He shares it with us word for word in the form of new ICOs, which he sends to earth every season. Collect as many Unicoins as possible each season to help Jokoje deliver his message and in return you can benefit from his creations. Find all the details about Jokoje's new coins on the ICO page!
-                                    </p>
-                                    <a href="#" class="btn_2">Visit ICO</a>
+                                <div class="col-md-8">
+                                    <div class="season_rightt">
+                                        <h2>BETA SEASON</h2>
+                                        <h4>Testing & Enhancing Phase</h4>
+                                        <p>
+                                            The unicorn Jokoje has an important message for all crypto investors on earth. He shares it with us word for word in the form of new ICOs, which he sends to earth every season. Collect as many Unicoins as possible each season to help Jokoje deliver his message and in return you can benefit from his creations. Find all the details about Jokoje's new coins on the ICO page!
+                                        </p>
+                                        <div class="season_btn">
+                                            <a href="#" class="btn_1">Visit ICO</a>
+                                            <a href="#" class="btn_2">Download Now <img src="assets/images/header/download.png" alt=""></a>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -124,49 +130,34 @@
                         </div>
                         <div class="col-md-4">
                             <div class="single_partner">
-                                <img src="assets/images/partner/1.png" alt="">
+                                <img src="assets/images/partner/4.png" alt="">
                             </div> 
                         </div>
                         <div class="col-md-4"> 
                             <div class="single_partner">
-                                <img src="assets/images/partner/2.png" alt="">
+                                <img src="assets/images/partner/5.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-4"> 
                             <div class="single_partner">
-                                <img src="assets/images/partner/3.png" alt="">
+                                <img src="assets/images/partner/6.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-4">
                             <div class="single_partner">
-                                <img src="assets/images/partner/1.png" alt="">
+                                <img src="assets/images/partner/7.png" alt="">
                             </div> 
                         </div>
                         <div class="col-md-4"> 
                             <div class="single_partner">
-                                <img src="assets/images/partner/2.png" alt="">
+                                <img src="assets/images/partner/8.png" alt="">
                             </div>
                         </div>
                         <div class="col-md-4"> 
                             <div class="single_partner">
-                                <img src="assets/images/partner/3.png" alt="">
+                                <img src="assets/images/partner/5.png" alt="">
                             </div>
-                        </div>
-                        <div class="col-md-4">
-                            <div class="single_partner">
-                                <img src="assets/images/partner/1.png" alt="">
-                            </div> 
-                        </div>
-                        <div class="col-md-4"> 
-                            <div class="single_partner">
-                                <img src="assets/images/partner/2.png" alt="">
-                            </div>
-                        </div>
-                        <div class="col-md-4"> 
-                            <div class="single_partner">
-                                <img src="assets/images/partner/3.png" alt="">
-                            </div>
-                        </div>
+                        </div> 
                     </div>
                 </div>
             </section>
@@ -176,7 +167,7 @@
             <section class="exciting_area section_padding">
                 <div class="container">
                     <div class="section_title">
-                        <h2>The exciting life <br> of jokoje</h2>
+                        <h2>Jokoje’s exciting Life</h2>
                     </div>
                     <div class="row">
                         <div class="col-md-12">
@@ -191,13 +182,10 @@
 
             <!--=====================  End game Area  ====================--> 
             <section class="game_area section_padding">
-                <div class="container">
-                    <div class="section_title">
-                        <h2>This Crypto Game is <br> different!</h2>
-                    </div>
+                <div class="container"> 
                     <div class="row gx-5">
                         <div class="col-md-6">
-                            <div class="single_game">
+                            <div class="single_game single_game_border">
                                 <div class="game_img"> 
                                     <img src="assets/images/game/1.png" alt="">
                                 </div>
@@ -242,7 +230,7 @@
 
                     <div class="discover_content">
                         <div class="discover_content_left">
-                            <h3>Click to earn free Unicorns!</h3>
+                            <h3>Click to earn <span>free</span> Unicorns!</h3>
                             <p>Earning money has never been easier! Tapping for Jokoje earns you Unicoins which give you status and wealth in return. You can exchange them for real cryptocurrencies every season. You can compete with other players and earn incredible bonuses in a league or daily quests. May the fittest miners win!</p>
                             <img src="assets/images/discover/coin.png" alt="">
                         </div>
@@ -250,7 +238,7 @@
                             <img src="assets/images/discover/main.png" alt="">
                         </div>
                         <div class="discover_content_left">
-                            <h3>Become a better miner with graphics cards!</h3>
+                            <h3>Become a better miner with <span>graphics cards</span>!</h3>
                             <p>Your graphics cards overheat when overloaded after a certain time and you can store up to 3 of them. Depending on the level you bring your graphics 
                                 card to, you can use it for longer without having to
                                  let it rest. Spin the wheels of fortune and reach Bull Island to find all the graphics cards.</p>
@@ -265,7 +253,7 @@
             <section class="rewords_area section_padding">
                 <div class="container">
                     <div class="section_title">
-                        <h2>Use special items and boosters <br> for maximum rewards</h2>
+                        <h2>Use special <span>items and boosters</span> <br> for maximum rewards</h2>
                     </div>
                     <div class="rewords_row"> 
                         <div class="single_rewords">
@@ -303,10 +291,10 @@
                 <div class="container">
                     <div class="section_title">
                         <h2>Compete with other Miners in various <br>
-                            Districts for promotion and wealth.</h2>
+                            Districts for <span>promotion</span> and wealth.</h2>
                     </div>
                     <div class="promotion_content">
-                        <div class="row">
+                        <div class="row align-items-center">
                             <div class="col-md-6">
                                 <div class="promotion_carsousel owl-carousel owl-theme">
                                     <div class="single_promotion">
@@ -355,17 +343,18 @@
                                         unfortunately  doesn't have. So he lets us participate 
                                         in his ICOs  through which he sends his message word 
                                         for word every 45 days and we help him mine Unicoins which he has to pay at the post office for the shipment. Let's find out together what Jokoje has to tell us!</p>
-                                    <a href="#" class="btn_2">Visit ICO</a>
+                                    <div class="explore_btn">
+                                        <a href="#" class="btn_2">Visit ICO</a>
+                                    </div>
                                 </div>
                             </div>
                             <div class="col-md-8">
                                 <div class="explore_right">
                                     <div class="section_title">
-                                        <h2>Explore the districts of the incredible world 
-                                            of Pakolt!</h2>
+                                        <h2>Explore the <span>districts</span> of <br> the incredible world <br> of Pakolt!</h2>
                                     </div>
                                     <div class="explore_img">
-                                        <img src="assets/images/" alt="">
+                                        <img src="assets/images/explore/Map.png" alt="">
                                     </div>
                                 </div>
                             </div>
@@ -374,11 +363,111 @@
                 </div>
             </section>
             <!--=====================  End explore Area  ====================--> 
+
+            <!--===================== Start Limited Area  ====================--> 
+            <section class="limited_area section_padding">
+                <div class="container">
+                    <div class="limited">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="promotion_carsousel limite_carousel owl-carousel owl-theme">
+                                    <div class="single_promotion">
+                                        <img src="assets/images/limited/1.png" alt="">
+                                    </div>
+                                    <div class="single_promotion">
+                                        <img src="assets/images/limited/1.png" alt="">
+                                    </div>
+                                    <div class="single_promotion">
+                                        <img src="assets/images/limited/1.png" alt="">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-md-6">
+                                <div class="limited_text">
+                                    <h3>Find exclusive and strictly <span>limited  NFTs</span> to gain even 
+                                        more Prestige!</h3>
+                                    <p>Collect unique Badges through special Achievements! The Unicorn Tap NFT Collection consists of many different Badges which are awarded to Players for Achievements, which they can then show to their friends through the profile picture. So what's stopping you? This much can be said: the faster, the better! After connecting your wallet, you can choose one of the Unicorn Tap NFTs as your Profile Picture and stand out from the Crowd. Therefore, keep your NFTs on your Wallet, which you have linked to your Player Account!</p>
+                                    <a href="#" class="btn_2">View All</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--=====================  End Limited Area  ====================--> 
+
+
+            <!--=====================  Start Become Area  ====================--> 
+            <section class="becone_area section_padding">
+                <div class="container">
+                    <div class="become_content">
+                        <div class="row">
+                            <div class="col-md-6">
+                                <div class="become_left">
+                                    <h3>Become a true Miner now and get <span>Unicorn Tap</span> for free. 
+                                        Help Jokoje deliver his Message to Earth and benefit from different Rewards!</h3>
+                                    <div class="become_btn">
+                                        <a href="#" class="btn_2">Download Now <img src="assets/images/header/download.png" alt=""></a> 
+                                        <a href="#" class="btn_1">Telegram<img src="assets/images/header/location.png" alt=""></a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <!--=====================  End Become Area  ====================--> 
+
+
         </main>
                 
         <!--=====================  Start Header Area  ====================-->
-        <footer class="footer_area">
-
+        <footer class="footer_area section_padding">
+            <div class="container">
+                <div class="header_top">
+                    <div class="row">
+                        <div class="col-md-8">
+                            <div class="footer_menu">
+                                <ul>
+                                    <li><a href="#">ICO</a></li>
+                                    <li><a href="#">Partners</a></li>
+                                    <li><a href="#">Comparison</a></li>
+                                    <li><a href="#">Mining</a></li>
+                                    <li><a href="#">League</a></li>
+                                    <li><a href="#">NFTs</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="footer_social">
+                                <ul>
+                                    <li><a href="#"><img src="assets/images/footer/1.png" alt=""></a></li>
+                                    <li><a href="#"><img src="assets/images/footer/2.png" alt=""></a></li>
+                                    <li><a href="#"><img src="assets/images/footer/3.png" alt=""></a></li>
+                                    <li><a href="#"><img src="assets/images/footer/4.png" alt=""></a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="header_botom">
+                    <div class="row">
+                        <div class="col-md-6">
+                            <div class="header_copy">
+                                <p>@2024 Unicorn Tap. All rights reserved </p>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="header_cond_term">
+                                <ul>
+                                    <li><a href="#">Terms & Agreements</a></li>
+                                    <li><a href="#">Privacy Policy</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </footer>
         <!--=====================  End Header Area  ====================-->
  
