--- a/index.html
+++ b/index.html
@@ -113,47 +113,47 @@
                         <h2>Our trusted Partners</h2>
                     </div>
                     <div class="row align-items-center">
-                        <div class="col-md-4">
+                        <div class="col-lg-4 col-sm-6">
                             <div class="single_partner">
                                 <img src="assets/images/partner/1.png" alt="">
                             </div> 
                         </div>
-                        <div class="col-md-4"> 
+                        <div class="col-lg-4 col-sm-6"> 
                             <div class="single_partner">
                                 <img src="assets/images/partner/2.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-4"> 
+                        <div class="col-lg-4 col-sm-6"> 
                             <div class="single_partner">
                                 <img src="assets/images/partner/3.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-lg-4 col-sm-6">
                             <div class="single_partner">
                                 <img src="assets/images/partner/4.png" alt="">
                             </div> 
                         </div>
-                        <div class="col-md-4"> 
+                        <div class="col-lg-4 col-sm-6"> 
                             <div class="single_partner">
                                 <img src="assets/images/partner/5.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-4"> 
+                        <div class="col-lg-4 col-sm-6"> 
                             <div class="single_partner">
                                 <img src="assets/images/partner/6.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-4">
+                        <div class="col-lg-4 col-sm-6">
                             <div class="single_partner">
                                 <img src="assets/images/partner/7.png" alt="">
                             </div> 
                         </div>
-                        <div class="col-md-4"> 
+                        <div class="col-lg-4 col-sm-6"> 
                             <div class="single_partner">
                                 <img src="assets/images/partner/8.png" alt="">
                             </div>
                         </div>
-                        <div class="col-md-4"> 
+                        <div class="col-lg-4 col-sm-6"> 
                             <div class="single_partner">
                                 <img src="assets/images/partner/5.png" alt="">
                             </div>
@@ -186,7 +186,7 @@
                     <div class="row gx-5">
                         <div class="col-md-6">
                             <div class="single_game single_game_border">
-                                <div class="game_img"> 
+                                <div class="game_img game_img_1"> 
                                     <img src="assets/images/game/1.png" alt="">
                                 </div>
                                 <ul>
@@ -202,7 +202,7 @@
                         </div>
                         <div class="col-md-6">
                             <div class="single_game">
-                                <div class="game_img">
+                                <div class="game_img game_img_2">
                                     <img src="assets/images/game/2.png" alt="">
                                 </div>
                                 <ul>
