--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     </head>
     <body> 
 
+        <div id="preloader">
+            <div id="loader"></div>
+        </div>
+
         
         <!--=====================  Start Header Area  ====================-->
         <header class="header_area">
