--- a/index.html
+++ b/index.html
@@ -40,17 +40,29 @@
                         <a href="#" class="logo_main">
                             <img src="assets/images/logo.png" alt=""> 
                         </a>
-                        <div class="logo_btn">
-                            <a class="btn_1" href="#">Audit</a>
-                            <a href="#" class="btn_2">Whitepaper</a>
+                        <div class="logo_sec_btn mobile_hide"> 
+                            <div class="logo_btn ">
+                                <a class="btn_1" href="#">Audit</a>
+                                <a href="#" class="btn_2">Whitepaper</a>
+                            </div>
                         </div> 
                     </div> 
                     <div class="header_social">
                         <ul>
-                            <li><a href="#" class="btn_1 join_btn">Join US <img src="assets/images/header/location.png" alt=""></a></li>
+                            <li><a href="#" class="btn_1 join_btn mobile_hide">Join US <img src="assets/images/header/location.png" alt=""></a></li>
                             <li><a href="#" class="btn_1 social_btn"><img src="assets/images/header/instagram.png" alt=""></a></li>
                             <li><a href="#" class="btn_1 social_btn"><img src="assets/images/header/twitter.png" alt=""></a></li>
+                            <li class="dekstop_hide"><a href="#" class="btn_1 social_btn mobile_bars"><i class="fas fa-bars"></i></a></li>
                         </ul>
+                    </div>
+                    <div class="mobile_menu_main dekstop_hide">
+                        <div class="mobile_menu ">
+                            <ul>
+                                <li><a href="#" class="btn_1">Join US <img src="assets/images/header/location.png" alt=""></a></li>
+                                <li> <a href="#" class="btn_2">Whitepaper</a></li>
+                                <li> <a class="btn_1" href="#">Audit</a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -125,47 +137,47 @@
                     <div class="partners_content"> 
                         <div class="partner_content_box">
                             <div class="row align-items-center">
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6">
                                     <div class="single_partner">
                                         <img src="assets/images/partner/1.png" alt="">
                                     </div> 
                                 </div>
-                                <div class="col-lg-4 col-sm-6"> 
+                                <div class="col-lg-4 col-6"> 
                                     <div class="single_partner">
                                         <img src="assets/images/partner/2.png" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6"> 
+                                <div class="col-lg-4 col-6"> 
                                     <div class="single_partner">
                                         <img src="assets/images/partner/3.png" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6">
                                     <div class="single_partner">
                                         <img src="assets/images/partner/4.png" alt="">
                                     </div> 
                                 </div>
-                                <div class="col-lg-4 col-sm-6"> 
+                                <div class="col-lg-4 col-6"> 
                                     <div class="single_partner">
                                         <img src="assets/images/partner/5.png" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6"> 
+                                <div class="col-lg-4 col-6"> 
                                     <div class="single_partner">
                                         <img src="assets/images/partner/6.png" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6">
+                                <div class="col-lg-4 col-6">
                                     <div class="single_partner">
                                         <img src="assets/images/partner/7.png" alt="">
                                     </div> 
                                 </div>
-                                <div class="col-lg-4 col-sm-6"> 
+                                <div class="col-lg-4 col-6"> 
                                     <div class="single_partner">
                                         <img src="assets/images/partner/8.png" alt="">
                                     </div>
                                 </div>
-                                <div class="col-lg-4 col-sm-6"> 
+                                <div class="col-lg-4 col-6"> 
                                     <div class="single_partner">
                                         <img src="assets/images/partner/5.png" alt="">
                                     </div>
