--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     </head>
     <body> 
 
-        <!-- <div id="preloader">
+        <div id="preloader">
             <div id="loader"></div>
-        </div> -->
+        </div>
 
         
         <!--=====================  Start Header Area  ====================-->
