--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                 <div class="container"> 
                     <div class="game_box"> 
                         <div class="row gx-5">
-                            <div class="col-md-6">
+                            <div class="col-6">
                                 <div class="single_game single_game_border">
                                     <div class="game_img game_img_1"> 
                                         <img src="assets/images/game/1.png" alt="">
@@ -230,7 +230,7 @@
                                     </ul> 
                                 </div>
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-6">
                                 <div class="single_game">
                                     <div class="game_img game_img_2">
                                         <img src="assets/images/game/2.png" alt="">
