--- a/beta-season.html
+++ b/beta-season.html
@@ -123,10 +123,12 @@
                 <div class="container">
                     <div class="section_title">
                         <h2>From Alpha Season to Beyond:</h2>
-                    </div>
-                    <div class="beta_alpah_box">
-                        <div class="beta_alpha_single">
-                            <div class="row">
+                    </div> 
+                </div>
+                <div class="beta_alpah_box">
+                    <div class="beta_alpha_single">
+                        <div class="container"> 
+                            <div class="row align-items-center">
                                 <div class="col-md-6">
                                     <div class="alpha_card">
                                         <h4>Alpha Season</h4>
@@ -142,12 +144,48 @@
                                 </div>
                                 <div class="col-md-6">
                                     <div class="alpha_img">
-                                        <img src="assets/images/beta/alpha/1.png" alt="">
+                                        <img src="assets/images/beta/alpha/1.png" alt=""> 
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                        <div class="alpha_shape_1">
+                            <img src="assets/images/beta/alpha/shape1.png" alt="">
+                        </div>
+                        <div class="alpha_roadmap">
+                            <img src="assets/images/beta/alpha/roadmap1.png" alt="">
+                        </div>
+                    </div> 
+                    <div class="beta_alpha_single">
+                        <div class="container"> 
+                            <div class="row align-items-center">
+                                <div class="col-md-6">
+                                    <div class="alpha_img">
+                                        <img src="assets/images/beta/alpha/2.png" alt=""> 
+                                    </div>
+                                </div>
+                                <div class="col-md-6">
+                                    <div class="alpha_card">
+                                        <h4>Alpha Season</h4>
+                                        <ul>
+                                            <li><p>Ideas and Prototypes</p></li>
+                                            <li><p>Development and Testing</p></li>
+                                            <li><p>Enhancing and Adjusting</p></li>
+                                            <li><p>Developing the Smart Contract</p></li>
+                                            <li><p>Connecting to Web3</p></li>
+                                            <li><p>Calculating the Prices</p></li> 
+                                        </ul>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="alpha_shape_1">
+                            <img src="assets/images/beta/alpha/shape2.png" alt="">
+                        </div>
+                        <div class="alpha_roadmap">
+                            <img src="assets/images/beta/alpha/roadmap1.png" alt="">
+                        </div>
+                    </div> 
                 </div>
             </section>
             <!--=====================  End Alpha Area  ====================-->  
